--- a/problema-1/src/style/Boton.css
+++ b/problema-1/src/style/Boton.css
@@ -1,11 +1,5 @@
-.main button{
+.button{
     width: 300px;
     height: 100px;
     background-color: blueviolet;
-}
-.main{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
