--- a/problema-1/src/App.css
+++ b/problema-1/src/App.css
@@ -3,9 +3,15 @@
   background-color: white;
   display: flex;
   justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  width: 100%;
+  height: 100vh;
 }
 .contenedor-principal{
   display: flex;
   flex-direction: row;
+  
 }
+
 
