--- a/problema-2/src/style/ListaItems.css
+++ b/problema-2/src/style/ListaItems.css
@@ -1,20 +1,21 @@
 .contenedor-principal {
     display: flex;
     flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100vh; 
 }
 
 .input {
     width: 300px;
-    height: 80px;
+    height: 40px;
     font-family: Roboto, sans-serif;
     border-radius: 5px;
     margin-top: 10px;
     font-size: var(--sm);
     background-color: var(--white);
-    color: var(--orange);
-    border: none;
+    border-color: black;
     padding: 0 10px;
+
 }
