--- a/problema-2/src/style/Nota.css
+++ b/problema-2/src/style/Nota.css
@@ -1,23 +1,28 @@
 :root {
     --orange: #FF872C;
-    --white: #DCDCE5;
+    --white: #FFFFFF;
+    --clear-grey: #cacaca;
     --sm: 24px;
 }
 
 button {
-    width: 300px;
-    height: 80px;
+    width: auto;
+    height: 40px;
     font-family: Roboto, sans-serif;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
     font-size: var(--sm);
-    background-color: var(--orange);
+    background-color: var(--clear-grey);
+
 
 }
 
 .contenedor-nota {
     background-color: var(--white);
+    display: flex;
+    flex-direction: row;
+    padding: 0%;
 
 }
 
@@ -49,10 +54,7 @@ button {
 }
 
 .boton {
-    width: 150px;
+    width: auto;
+    height: 40px;
 }
 
-button:hover {
-    background-color: var(--white);
-    color: var(--orange);
-}
