--- a/problema-3/src/style/ListaNotas.css
+++ b/problema-3/src/style/ListaNotas.css
@@ -14,7 +14,7 @@
     margin-top: 10px;
     font-size: var(--sm);
     background-color: var(--white);
-    color: var(--orange);
-    border: none;
+    color: black;
+    
     padding: 0 10px;
 }
