--- a/problema-3/src/style/Nota.css
+++ b/problema-3/src/style/Nota.css
@@ -1,6 +1,6 @@
 :root {
     --orange: #FF872C;
-    --white: #DCDCE5;
+    --white: #ffffff;
     --sm: 24px;
 }
 
@@ -9,10 +9,10 @@ button {
     height: 80px;
     font-family: Roboto, sans-serif;
     border-radius: 5px;
-    cursor: pointer;
+    
     margin-top: 10px;
     font-size: var(--sm);
-    background-color: var(--orange);
+    background-color: var(--white);
 
 }
 
@@ -21,28 +21,11 @@ button {
 
 }
 
-.editar-nota {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--white);
-    color: var(--orange);
-
-}
-
-.editar-nota textarea {
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-    font-size: var(--sm);
-    text-align: center;
-
-}
-
 .nota {
     width: 300px;
     height: 80px;
     border-radius: 5px;
-    cursor: pointer;
+    
     margin-top: 10px;
     font-size: var(--sm);
     text-align: center;
@@ -54,5 +37,5 @@ button {
 
 button:hover {
     background-color: var(--white);
-    color: var(--orange);
+    color: var(--black);
 }
